  - #2030, n-raster (and n-band) ST_MapAlgebra (Bborie Park / UC Davis)
  - Added geomval array variant of ST_SetValues() to set many pixel values of
    a band using a set of geometries and corresponding values in one call
    (Bborie Park / UC Davis)
  - ST_Tile(raster) to break up a raster into tiles (Bborie Park / UC Davis)
  - #739, UpdateRasterSRID()

* Enhancements *
  - #823,  tiger geocoder: Make loader_generate_script download portion 
           less greedy
  - #1363, ST_AddBand(raster, ...) array version rewritten in C
  - #1364, ST_Union(raster, ...) aggregate function rewritten in C
  - #1661, Add aggregate variant of ST_SameAlignment
  - #1719, Add support for Point and GeometryCollection ST_MakeValid inputs
  - #1780, support ST_GeoHash for geography
  - #1796, Big performance boost for distance calculations in geography
  - #1802, improved function interruptibility.
  - #1856, tiger geocoder: reverse geocoder rating setting for prefer 
           numbered highway name
  - #1938, Refactor basic ST_AddBand to add multiple new bands in one call
  - #1978, wrong answer when calculating length of a closed circular 
           arc (circle)
  - #1989, Preprocess input geometry to just intersection with raster
           to be clipped
  - #2021, Added multi-band support to ST_Union(raster, ...) aggregate function
  - #2006, better support of ST_Area(geography) over poles and dateline
  - #2065, ST_Clip(raster, ...) now a C function
  - TopologySummary output now includes unregistered layers and a count
    of missing TopoGeometry objects from their natural layer.
  - ST_HillShade(), ST_Aspect() and ST_Slope() have one new optional 
    parameter to interpolate NODATA pixels before running the operation.
  - point variant of ST_SetValue(raster) is now a wrapper around geomval 
    variant of ST_SetValues(rast).
  - proper support for raster band's isnodata flag in core API and loader.

* Fixes *
